src/test/ui/coherence-impls-copy.stderr
error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:29:15
   |
LL | impl Copy for &'static mut MyType {}
   |               ^^^^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:33:15
   |
LL | impl Copy for (MyType, MyType) {}
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:37:15
   |
LL | impl Copy for &'static NotSync {}
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:40:15
   |
LL | impl Copy for [MyType] {}
   |               ^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:44:15
   |
LL | impl Copy for &'static [NotSync] {}
   |               ^^^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:33:1
   |
LL | impl Copy for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:40:1
   |
LL | impl Copy for [MyType] {}
   | ^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:44:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to 8 previous errors

Some errors occurred: E0117, E0206.
For more information about an error, try `rustc --explain E0117`.
